# goldcast-ai

./: .coverage  .env  CLAUDE.md  README.md  coverage.xml  pyproject.toml
ai-docs/: implementation.md  plan.md  prd.md  qa.md  rules.md  spec.md
data/raw/: db_com_capm_gold.csv
src/gold_forecasting/: __init__.py  config.py
src/gold_forecasting/data_processing/: loader.py
src/gold_forecasting/features/: __init__.py  unified_features.py
src/gold_forecasting/modeling/: arima_model.py  gpu_train.py  lstm_model.py  train.py  unified_train.py  xgboost_model.py
src/gold_forecasting/utils/: logging.py
test-results/: junit.xml
tests/unit/data_processing/: test_loader.py
tests/unit/features/: test_unified_features.py
tests/unit/modeling/: test_lstm_model.py  test_train.py  test_unified_train.py  test_xgboost_model.py
